# haxum

./: Cargo.toml  LICENSE  Makefile  README.md  TODOS.md
src/: lib.rs  main.rs
src/controllers/: hello.rs  mod.rs  ping.rs  string.rs
src/models/: app_state.rs  mod.rs  string_body.rs
src/router/: router.rs
src/services/: mod.rs  redis_service.rs  tracing.rs
