[package]
name = "haxum"
version = "0.1.0"
edition = "2024"

[dependencies]
axum =  {version = "0.8.3", features = ["__private"]}
bb8 = "0.9.0"
bb8-redis = "0.21.0"
redis = {version = "0.29.5", features = ["tokio-comp"]}
regex = "1.11.1"
serde = {version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = {version ="1.44.1", features = ["full"] }
tower = "0.5.2"
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.19", features = ["env-filter", "chrono"]}
